--- a/src/styles/scss/components/_skills.scss
+++ b/src/styles/scss/components/_skills.scss
@@ -4,7 +4,7 @@
   h2 {
     font-size: clamp(pxToRem(30px), 3vw, pxToRem(60px));
     font-weight: $semi-bold;
-    margin-bottom: $spacing-16;
+    margin-bottom: $spacing-24;
     padding: 0px $spacing-40;
     text-align: center;
   }
@@ -55,10 +55,6 @@
 
 @media (min-width: 1000px) {
   .skills-container {
-    h2 {
-      margin-bottom: $spacing-24;
-    }
-
     .skills-icon-container {
       display: flex;
       justify-content: center;
